V1.6.2 - refacto